# lightning-hydra-seed

./: .coverage  .dockerignore  .gitignore  LICENSE  Makefile  README.md  pyproject.toml  requirements.txt  train.py
.devcontainer/: Dockerfile
.github/workflows/: pythonapp.yaml
conf/: config.yml
conf/dataset/: mnist.yaml
conf/loggers/: thomas-chaton.yaml
conf/model/: simple_mlp.yaml
conf/optimizers/: adam.yaml
conf/task/: categorical_classification.yaml
conf/trainer/: debugging.yaml
scripts/: clean_requirements.sh
src/: __init__.py  config.py
src/core/: base_dataset.py  base_model.py  base_task.py  transforms.py
src/datasets/: mnist.py
src/models/: simple_mlp.py
src/tasks/: __init__.py  bases.py  classification.py
src/utils/: jit.py  loggers.py
test/: test_inference.py
